did the html for the portfolio page. added images for the portfolio page.

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
         </header>
         <form>
         <section id="contact">
+            <h1>Contact</h1>
+            <hr>
             <br>
             Name
             <br>
