added the style.css file, and some touch ups to the header in the index file

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
         <title>
             That Portfolio Though
         </title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <header>
             <section id="name"><h2>Simon Cain</h2></section>
-            Header
             <section id="nav">
                 <a href="index.html">About</a> 
-                <a href="portfolio.html">Portfolio</a> 
+                <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </section>
         </header>
+        <br>
         <section id="bio">
-            <h1>About me</h1>
+            <h2>About me</h2>
             <hr>
-            <img src="/images/simon.jpg" alt="Simon Cain" height=200px width=200>
+            <img src="assets/images/simon.jpg" alt="Simon Cain" height=200px width=200>
             <p>
                 I am a 35 Toronto native living and working downtown. Employed at a private school in their IT Department.
                 Hobbies include food, music, video games, and film.
