Fixed the header/footer on each page. Fixed the layout on the index  page.

--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,15 @@
         <title>
             That Portfolio Though
         </title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <header>
             <section id="name"><h2>Simon Cain</h2></section>
-            Header
             <section id="nav">
-                <a href="index.html">About</a> 
-                <a href="portfolio.html">Portfolio</a> 
-                <a href="contact.html">Contact</a>
+                <a href="index.html">About     |</a> 
+                <a href="portfolio.html">Portfolio</a>   
+                <a href="contact.html">|     Contact</a>
             </section>
         </header>
         <form>
@@ -35,9 +34,6 @@
     </form>
     </body>
     <footer class="footer">
-            <div id="upperlip">
-                
-            </div>
-            copywrite
-        </footer>
+        Copywrite
+    </footer>
 </html>
