--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
         <header>
             <section id="name"><h2>Simon Cain</h2></section>
             <section id="nav">
-                <a href="index.html">About</a> 
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a href="index.html">About     |</a> 
+                <a href="portfolio.html">Portfolio</a>   
+                <a href="contact.html">|     Contact</a>
             </section>
         </header>
         <br>
         <section id="bio">
             <h2>About me</h2>
             <hr>
+            <br>
             <img src="assets/images/simon.jpg" alt="Simon Cain" height=200px width=200>
             <p>
                 I am a 35 Toronto native living and working downtown. Employed at a private school in their IT Department.
@@ -26,10 +27,7 @@
             </p>
         </section>
         <footer class="footer">
-            <div id="upperlip">
-
-            </div>
-            copywrite
+            Copywrite
         </footer>
     </body>
 </html>
