--- a/portfolio.html
+++ b/portfolio.html
@@ -4,37 +4,33 @@
         <title>
             That Portfolio Though
         </title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <header>
             <section id="name"><h2>Simon Cain</h2></section>
-            Header
             <section id="nav">
-                <a href="index.html">About</a> 
-                <div class="vl"></div>
-                <a href="portfolio.html">Portfolio</a>
-                <div class="vl"></div> 
-                <a href="contact.html">Contact</a>
+                <a href="index.html">About     |</a> 
+                <a href="portfolio.html">Portfolio</a>   
+                <a href="contact.html">|     Contact</a>
             </section>
         </header>
         <section id="projects">
             <h1>Portfolio</h1>
             <hr>
-            <img src="/images/image.jpg" alt="project1" height=200px width=200>
+            <img src="assets/images/project1.jpg" alt="project1" height=50px width=50>
             <br>
-            <img src="/images/image.jpg" alt="project2" height=200px width=200>
+            <img src="assets/images/project2.jpg" alt="project2" height=50 width=50>
             <br>
-            <img src="/images/image.jpg" alt="project3" height=200px width=200>
+            <img src="assets/images/image.jpg" alt="project3" height=50 width=50>
             <br>
-            <img src="/images/image.jpg" alt="project4" height=200px width=200>
+            <img src="assets/images/project4.jpg" alt="project4" height=50 width=50>
             <br>
-            <img src="/images/image.jpg" alt="project5" height=200px width=200>
+            <img src="assets/images/project5.jpg" alt="project5" height=50 width=50>
             <br>
         </section>
     </body>
     <footer class="footer">
-            <div id="upperlip"></div>
-            copywrite
-        </footer>
+        Copywrite
+    </footer>
 </html>
