--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <section id="name"><h2>Simon Cain</h2></section>
+            <section id="name"><h1>Simon Cain</h1></section>
             <section id="nav">
                 <a href="index.html">About     |</a> 
                 <a href="portfolio.html">Portfolio</a>   
@@ -16,21 +16,31 @@
             </section>
         </header>
         <section id="projects">
-            <h1>Portfolio</h1>
+            <h2>Portfolio</h2>
             <hr>
-            <img src="assets/images/project1.jpg" alt="project1" height=50px width=50>
+            <div class="box-set">
+            
+            <img src="assets/images/project1.jpg" alt="project1" height=75 width=75>
+            <div id="project1"> Project 1
+            </div>
+            <div id="project2">Project2
+            <img src="assets/images/project2.jpg" alt="project2" height=75 width=75>
+            </div>
+            <div id="project3">Project3
+            <img src="assets/images/image.jpg" alt="project3" height=75 width=75>
+            </div>
+            <div id="project4">Project4
+            <img src="assets/images/project4.jpg" alt="project4" height=75 width=75>
+            </div>
+            <div id="project3">Project5
+            <img src="assets/images/project5.jpg" alt="project5" height=75 width=75>
             <br>
-            <img src="assets/images/project2.jpg" alt="project2" height=50 width=50>
-            <br>
-            <img src="assets/images/image.jpg" alt="project3" height=50 width=50>
-            <br>
-            <img src="assets/images/project4.jpg" alt="project4" height=50 width=50>
-            <br>
-            <img src="assets/images/project5.jpg" alt="project5" height=50 width=50>
-            <br>
+            </div>
+            </div>
         </section>
-    </body>
+    
     <footer class="footer">
         Copywrite
     </footer>
+</body>
 </html>
