--- a/portfolio.html
+++ b/portfolio.html
@@ -18,27 +18,27 @@
         <section id="projects">
             <h2>Portfolio</h2>
             <hr>
-            <div class="box-set">
-            
-            <img src="assets/images/project1.jpg" alt="project1" height=75 width=75>
-            <div id="project1"> Project 1
+            <div class="image1">
+            <img src="assets/images/project1.jpg" alt="project1" height=100 width=100>
+            <h3>Project 1</h3>
             </div>
-            <div id="project2">Project2
-            <img src="assets/images/project2.jpg" alt="project2" height=75 width=75>
+            <div class="image2">
+            <img src="assets/images/project2.jpg" alt="project2" height=100 width=100>
+            <h3>Project 2</h3>
             </div>
-            <div id="project3">Project3
-            <img src="assets/images/image.jpg" alt="project3" height=75 width=75>
+            <div class="image3">
+            <img src="assets/images/image.jpg" alt="project3" height=100 width=100>
+            <h3>Project 3</h3>
             </div>
-            <div id="project4">Project4
-            <img src="assets/images/project4.jpg" alt="project4" height=75 width=75>
-            </div>
-            <div id="project3">Project5
-            <img src="assets/images/project5.jpg" alt="project5" height=75 width=75>
-            <br>
-            </div>
+            <div class="image4">
+            <img src="assets/images/project4.jpg" alt="project4" height=100 width=100>
+            <h3>Project 4</h3>
+            </div> 
+            <div class="image5">
+            <img src="assets/images/project5.jpg" alt="project5" height=100 width=100>
+            <h3>Project 5</h3>
             </div>
         </section>
-    
     <footer class="footer">
         Copywrite
     </footer>
