--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
         <title>
             That Portfolio Though
         </title>
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
