--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html>
+
+<html lang="en">
     <head>
         <title>
             That Portfolio Though
@@ -20,7 +21,7 @@
             <h2>About me</h2>
             <hr>
             <br>
-            <img src="assets/images/simon.jpg" alt="Simon Cain" height=200px width=200>
+            <img src="assets/images/simon.jpg" alt="Simon Cain" height=200px width=200px>
             
             <p>
             <br>
